--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,14 +22,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        HTTP_PROXY: http://host.docker.internal:10808
-        HTTPS_PROXY: http://host.docker.internal:10808
-        http_proxy: http://host.docker.internal:10808
-        https_proxy: http://host.docker.internal:10808
-        NO_PROXY: localhost,127.0.0.1
-      extra_hosts:
-        - "host.docker.internal:host-gateway"
+      # args:
+      #   HTTP_PROXY: http://host.docker.internal:10808
+      #   HTTPS_PROXY: http://host.docker.internal:10808
+      #   http_proxy: http://host.docker.internal:10808
+      #   https_proxy: http://host.docker.internal:10808
+      #   NO_PROXY: localhost,127.0.0.1
+      # extra_hosts:
+      #   - "host.docker.internal:host-gateway"
     image: ghcr.io/niflheimdevs/dyslexics-clock
     container_name: dyslexic_backend
     restart: always
