fix postgres volume mounting

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,8 @@ services:
       POSTGRES_DB: ${DB_NAME}
     volumes:
       - ./migration/init.sql:/docker-entrypoint-initdb.d/01-init.sql
-      - pgdata:/var/lib/postgresql/data
+      # - pgdata:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql
       - ./config/pg_hba.conf:/var/lib/postgresql/data/18/pg_hba.conf
     command: -p 5433
     # ports:
