--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "word-clock",
+  "name": "dyslexics-clock",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,23 +11,26 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
-    "mqtt": "^5.14.1",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-devtools": "^5.91.1",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.25",
     "react": "^19.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-time-picker": "^8.0.2",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+    "@types/react": "^19.2.5",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
-    "vite": "^7.2.2"
+    "vite": "^7.2.4"
   }
 }
